--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,23 @@
 .logo {
-  width: 4rem;
-  
+  width: 25rem;
+  margin-left: .5rem;
 }
 
-.logo2 {
-  width: 10rem;
-}
-
-.name {
-  width: 32rem;
-  margin-left: 4rem;
-  margin-right: 5rem;
-}
 
 nav a.nav-link {
   font-weight: 500;
+  font-size: 8px;
   letter-spacing: 0.4rem;
   cursor: pointer;
   margin-left: 2.5rem;
+  padding: 0;
+  
 }
 
 nav ul li {
   text-transform: uppercase;
 }
 
+.navbar-brand {
+padding: 0 !important
+}
