--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,17 @@ nav a.nav-link {
   cursor: pointer;
   margin-left: 2.5rem;
   padding: 0;
-  
 }
 
 nav ul li {
   text-transform: uppercase;
 }
 
-.navbar-brand {
-padding: 0 !important
+.navbar .navbar-collapse {
+  text-align: right;
+  padding-right: 5mm;
+}
+
+.nav-item {
+  margin-top: 2.5mm;
 }
