--- a/src/App.css
+++ b/src/App.css
@@ -6,22 +6,12 @@
 
 nav a.nav-link {
   font-weight: 500;
-  font-size: 8px;
+  font-size: 7px;
   letter-spacing: 0.4rem;
   cursor: pointer;
   margin-left: 2.5rem;
-  padding: 0;
+  padding-bottom: 1rem;
 }
 
-nav ul li {
-  text-transform: uppercase;
-}
 
-.navbar .navbar-collapse {
-  text-align: right;
-  padding-right: 5mm;
-}
 
-.nav-item {
-  margin-top: 2.5mm;
-}
