font awesome added.

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,16 @@ nav ul li {
   margin-top: 2.5mm;
 }
 
-.navbar-nav > li > a.active, .navbar-nav > li > a:focus {
-  border-top: .2rem solid salmon;
+.navbar-nav > li > a {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
+  border-top: .15rem solid salmon;
+}
+
+.navbar-nav > li > a:hover {
+  border-top: .15rem solid salmon;
 }
 
