--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ nav ul li {
   padding-top: 7rem;
   font-size: 1.75rem;
   color: rgb(249, 233, 193);
-  font-family: Oswald;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .tsparticles-canvas-el {
