--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
 .logo {
   width: 25rem;
   margin-left: .5rem;
@@ -14,11 +16,14 @@ nav a.nav-link {
   letter-spacing: 0.4rem;
   cursor: pointer;
   margin-left: 2.5rem;
-  padding-bottom: 1rem;
 }
+
 
 nav ul li {
   text-transform: uppercase;
+  font-family: Montserrat;
+  padding-bottom: 15px;
+
 }
 
 .navbar .navbar-collapse {
@@ -31,8 +36,11 @@ nav ul li {
 }
 
 .navbar-nav > li > a {
-  margin-right: 0.75rem;
-  margin-left: 0.75rem;
+  margin-right: 3.5rem;
+  margin-left: 2.5rem;
+  font-size: 10px;
+  text-decoration: none;
+  color: black;
 }
 
 .navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
