--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,13 @@ nav {
 }
 
 
-
+nav a.nav-link {
+  font-weight: 500;
+  font-size: 7px;
+  letter-spacing: 0.4rem;
+  cursor: pointer;
+  margin-left: 2.5rem;
+}
 
 
 nav ul li {
