--- a/src/App.css
+++ b/src/App.css
@@ -36,19 +36,19 @@ nav ul li {
 }
 
 .navbar-nav > li > a {
-  margin-right: 4rem;
-  margin-left: 3rem;
+  margin-right: 4.5rem;
+  margin-left: 3.5rem;
   font-size: 16px;
   text-decoration: none;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 .navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
-  border-top: .15rem solid rgb(227, 219, 190);
+  border-top: .15rem solid rgb(208, 199, 166);
 }
 
 .navbar-nav > li > a:hover {
-  border-top: .15rem solid rgb(227, 219, 190);
+  border-top: .2rem solid rgb(208, 199, 166);
 }
 
 .header-wraper {
@@ -70,7 +70,7 @@ nav ul li {
 
 .typed-text {
   padding-top: 7.5rem;
-  font-size: 1.8rem;
+  font-size: 1.75rem;
   color: rgb(242, 232, 208);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
