--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 
 .logo {
-  width: 25rem;
-  margin-left: .5rem;
+  width: 30rem;
+  margin-left: .75rem;
 }
 
 nav {
@@ -69,9 +69,9 @@ nav ul li {
 
 
 .typed-text {
-  padding-top: 7.5rem;
-  font-size: 1.75rem;
-  color: rgb(242, 232, 208);
+  padding-top: 7.rem;
+  font-size: 1.7rem;
+  color: rgb(233, 223, 199);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
