--- a/src/App.css
+++ b/src/App.css
@@ -36,19 +36,19 @@ nav ul li {
 }
 
 .navbar-nav > li > a {
-  margin-right: 4.75rem;
-  margin-left: 3.75rem;
-  font-size: 14px;
+  margin-right: 4.5rem;
+  margin-left: 3.5rem;
+  font-size: 12px;
   text-decoration: none;
   color: rgb(0, 0, 0);
 }
 
 .navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
-  border-top: .17rem solid rgb(203, 191, 150);
+  border-top: .175rem solid rgb(203, 191, 150);
 }
 
 .navbar-nav > li > a:hover {
-  border-top: .17rem solid rgb(203, 191, 150);
+  border-top: .175rem solid rgb(203, 191, 150);
 }
 
 .header-wraper {
@@ -69,8 +69,8 @@ nav ul li {
 
 
 .typed-text {
-  padding-top: 7.rem;
-  font-size: 1.7rem;
+  padding-top: 7rem;
+  font-size: 1.75rem;
   color: rgb(233, 223, 199);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
